--- a/lead_extractor/templates/lead_extractor/base.html
+++ b/lead_extractor/templates/lead_extractor/base.html
@@ -509,6 +509,11 @@
         {% for message in messages %}
         <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
             {{ message }}
+            {% if message.tags == 'info' and 'processada' in message|lower %}
+                <div class="mt-2">
+                    <a href="{% url 'search_history' %}" class="btn btn-sm btn-outline-primary">Ver Minhas Pesquisas</a>
+                </div>
+            {% endif %}
             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
         </div>
         {% endfor %}
